[gd_scene load_steps=10 format=3 uid="uid://kv6mv8j4a7yc"]

[ext_resource type="Theme" uid="uid://bipr4bw2pcbw6" path="res://themes/retro.tres" id="1_e060e"]
[ext_resource type="Theme" uid="uid://cqfyqanbgls4b" path="res://themes/display.tres" id="1_inosm"]
[ext_resource type="Script" path="res://game/aside_menu.gd" id="1_x6mru"]
[ext_resource type="PackedScene" uid="uid://uo48yikfpeo8" path="res://game/save_slots.tscn" id="4_dypj6"]
[ext_resource type="FontFile" uid="uid://bpqyjjs05qqgh" path="res://assets/fonts/m42flight721/m42.TTF" id="4_x77hr"]
[ext_resource type="StyleBox" uid="uid://dmyco2rlh7ok1" path="res://game/box_dark.tres" id="6_1fwp2"]
[ext_resource type="FontFile" uid="uid://dcygvh0q3vd35" path="res://assets/fonts/pixel-font-virtue-assets/ttf/virtue_extra_large_bold.ttf" id="6_ukyuh"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wvv64"]
bg_color = Color(0.058, 0.0699, 0.1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yteaq"]
bg_color = Color(0.0754, 0.09087, 0.13, 1)

[node name="Aside Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_e060e")
script = ExtResource("1_x6mru")

[node name="Panel" type="Panel" parent="."]
layout_mode = 2
anchor_left = 0.211
anchor_right = 0.211
anchor_bottom = 1.0
offset_left = -69.28
offset_top = 11.0
offset_right = 80.72
offset_bottom = -11.0
theme_override_styles/panel = SubResource("StyleBoxFlat_wvv64")

[node name="Title" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.25
anchor_right = 1.0
anchor_bottom = 0.25
offset_left = -30.24
offset_top = -42.0
offset_right = 29.76
offset_bottom = -9.0
grow_horizontal = 2
size_flags_horizontal = 3
theme = ExtResource("1_inosm")
theme_override_constants/shadow_outline_size = 20
theme_override_fonts/font = ExtResource("4_x77hr")
theme_override_font_sizes/font_size = 8
text = "CROSSROADS"
horizontal_alignment = 1
vertical_alignment = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.595
anchor_right = 1.0
anchor_bottom = 0.595
offset_left = 8.0
offset_top = -116.56
offset_right = -8.0
offset_bottom = 91.44
grow_horizontal = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 0
alignment = 1

[node name="Continue" type="Button" parent="Panel/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
text = "Continue
"
flat = true

[node name="Resume" type="Button" parent="Panel/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
text = "Resume"
flat = true

[node name="NewGame" type="Button" parent="Panel/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
text = "New Game"
flat = true

[node name="SaveGame" type="Button" parent="Panel/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
text = "Save Game"
flat = true

[node name="LoadGame" type="Button" parent="Panel/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
text = "Load Game"
flat = true

[node name="Options" type="Button" parent="Panel/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
text = "Options
"
flat = true

[node name="ExitToMainMenu" type="Button" parent="Panel/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
text = "Quit to Main Menu"
flat = true

[node name="Exit" type="Button" parent="Panel/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
text = "Exit to Desktop"
flat = true

[node name="SaveSlotWrapper" type="Panel" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_yteaq")

[node name="SaveSlotsLabel" type="Label" parent="SaveSlotWrapper"]
unique_name_in_owner = true
layout_mode = 1
offset_left = 78.0
offset_right = 308.0
offset_bottom = 36.0
theme_override_fonts/font = ExtResource("6_ukyuh")
text = "Save Game"
vertical_alignment = 2

[node name="HBoxContainer" type="HBoxContainer" parent="SaveSlotWrapper"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 74.0
offset_top = 48.0
offset_right = -76.0
offset_bottom = -17.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 8

[node name="Panel" type="Panel" parent="SaveSlotWrapper/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 1.5
theme_override_styles/panel = ExtResource("6_1fwp2")

[node name="MarginContainer" type="MarginContainer" parent="SaveSlotWrapper/HBoxContainer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 1
theme_override_constants/margin_top = 1
theme_override_constants/margin_right = 1
theme_override_constants/margin_bottom = 1

[node name="SaveSlots" parent="SaveSlotWrapper/HBoxContainer/Panel/MarginContainer" instance=ExtResource("4_dypj6")]
unique_name_in_owner = true
clip_contents = true
layout_mode = 2

[node name="VSeparator" type="VSeparator" parent="SaveSlotWrapper/HBoxContainer"]
visible = false
layout_mode = 2

[node name="Panel2" type="Panel" parent="SaveSlotWrapper/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = ExtResource("6_1fwp2")
